[gd_scene load_steps=4 format=3 uid="uid://blf74fhdm815t"]

[ext_resource type="Script" path="res://scripts/mainMap.gd" id="1_7i0sx"]
[ext_resource type="Script" path="res://scripts/drawRectangle.gd" id="1_p3eop"]
[ext_resource type="Texture2D" uid="uid://ddguf38flp451" path="res://sprites/regCombat.png" id="2_2xxc0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7i0sx")

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("1_p3eop")

[node name="Button" type="Button" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 128.0
action_mode = 0
button_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="Button"]
position = Vector2(32, 32)
scale = Vector2(2, 2)
texture = ExtResource("2_2xxc0")

[node name="Button2" type="Button" parent="."]
offset_left = 64.0
offset_top = 288.0
offset_right = 128.0
offset_bottom = 352.0

[node name="Sprite2D" type="Sprite2D" parent="Button2"]
position = Vector2(32, 32)
scale = Vector2(2, 2)
texture = ExtResource("2_2xxc0")

[node name="Button3" type="Button" parent="."]
offset_left = 64.0
offset_top = 512.0
offset_right = 128.0
offset_bottom = 576.0

[node name="Sprite2D" type="Sprite2D" parent="Button3"]
position = Vector2(32, 32)
scale = Vector2(2, 2)
texture = ExtResource("2_2xxc0")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
